--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "npm run pug_tmpl && live-server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "pug_tmpl": "pug --client blocks/exerciseInfo/exerciseInfo.pug --extension pug.js --name exerciseInfo_tmpl && pug --client blocks/exerciseAddForm/exerciseAddForm.pug --extension pug.js --name exerciseAddForm_tmpl && pug --client blocks/exerciseResultForm/exerciseResultForm.pug --extension pug.js --name exerciseResultForm_tmpl"
+    "pug_tmpl": "pug --client blocks/exerciseInfo/exerciseInfo.pug --extension pug.js --name exerciseInfo_tmpl && pug --client blocks/exerciseAddForm/exerciseAddForm.pug --extension pug.js --name exerciseAddForm_tmpl && pug --client blocks/exerciseResultForm/exerciseResultForm.pug --extension pug.js --name exerciseResultForm_tmpl && pug --client blocks/trainingProgress/trainingProgress.pug --extension pug.js --name trainingProgress_tmpl"
   },
   "repository": {
     "type": "git",
