--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "eslint.enable": false
+    "eslint.enable": true,
+    "stylelint.enable": true,
+    "eslint.validate": [ "javascript", "javascriptreact", "html" ]
 }
