--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "milligram": "^1.3.0"
   },
   "devDependencies": {
+    "eslint": "^3.17.1",
+    "eslint-config-google": "^0.7.1",
     "pug": "^2.0.0-beta11"
   },
   "scripts": {
